# hgailab_ros

./: CMakeLists.txt  README.md  package.xml
classes/: LS.names
config/: yolov3-voc-test.cfg
launch/: yolov3_detector_cuda.launch  yolov3_detector_with_cpu.launch
scripts/: detector_with_cpu.py  detector_with_cuda.py
